tests/snapshots/generator__advanced_create_files@_exact_bytes_1000_1_0_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 0 where each directory contains approximately 0 other directories. Each file will contain approximately 1,000 bytes of random data.
Created 1 file (664 B) across 0 directories.

/0

0xd9daaaf76ff8406e
