tests/snapshots/generator__advanced_create_files@_exact_bytes_1000_1_1_100.snap
---
source: tests/generator.rs
expression: "&golden"
---
Exactly 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory. Each file will contain approximately 1,000 bytes of random data.
Created 1 file (468 B) across 0 directories.

/0

0x6e8927be9f114a3e
